Updating website wallpaper

--- a/about_page/style_about.css
+++ b/about_page/style_about.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(3, 4, 51);
+    background-image: url('C:/Estudos/CESAR/IC/git/Portfolio_website/portfolio_website/Images/background.jpg');
 }
 
 #loc{
