--- a/about_page/style_about.css
+++ b/about_page/style_about.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('C:/Estudos/CESAR/IC/git/Portfolio_website/portfolio_website/Images/background.jpg');
+    background-image: url('C:/Estudos/CESAR/IC/git/Portfolio_website/portfolio_website/Images/Background.png');
 }
 
 #loc{
