Adding images to the same folder

--- a/about_page/style_about.css
+++ b/about_page/style_about.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('C:/Estudos/CESAR/IC/git/Portfolio_website/portfolio_website/Images/Background.png');
+    background-image: url("portfolio_website/about_page/Background.png");
 }
 
 #loc{
