--- a/about_page/style_about.css
+++ b/about_page/style_about.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("portfolio_website/about_page/Background.png");
+    background-image: url("Background.png");
 }
 
 #loc{
