--- a/about_page/style_about.css
+++ b/about_page/style_about.css
@@ -34,11 +34,39 @@ body{
   justify-content: center;
 }
 
+.profile{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
 #profile_photo{
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    margin-left: 450px;
+    margin-left: 350px;
     margin-top: 60px;
+}
+
+.profile_header{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+}
+
+#profile_title{
+    font-size: 60px;
+    margin-top: 100px;
+    margin-left: 30px;
+    margin-bottom: 2px;
+}
+
+#profile_subtitle{
+    font-size:xx-large;
+    margin-left: 30px;
+    color: rgba(255, 255, 255, 0.671);
 }
