--- a/about_page/style_about.css
+++ b/about_page/style_about.css
@@ -68,5 +68,15 @@ body{
 #profile_subtitle{
     font-size:xx-large;
     margin-left: 30px;
-    color: rgba(255, 255, 255, 0.671);
+    color: rgba(255, 255, 255, 0.418);
 }
+
+.profile_text {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: white;
+  font-size: large;
+  display: flex;
+  justify-content:center;
+  margin-left: 200px;
+}
+
