--- a/about_page/style_about.css
+++ b/about_page/style_about.css
@@ -93,14 +93,23 @@ body{
   margin-top: 40px;
 }
 
+a{
+  color: white;
+  text-decoration: none;
+}
+
+span{
+  line-height: 1;
+  position: relative;
+  top: -5px;
+}
+
 .profile_git{
     display: inline-flex;
     align-items: center;
     gap: 8px;
     padding: 6px 6px;
     background-color: #272729;
-    color: #ffffff;
-    text-decoration: none;
     border-radius: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 14px;
@@ -122,8 +131,6 @@ body{
     gap: 8px;
     padding: 6px 12px;
     background-color: #272729;
-    color: #ffffff;
-    text-decoration: none;
     border-radius: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 14px;
@@ -145,8 +152,6 @@ body{
     gap: 8px;
     padding: 6px 12px;
     background-color: #272729;
-    color: #ffffff;
-    text-decoration: none;
     border-radius: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 14px;
@@ -168,8 +173,6 @@ body{
     gap: 8px;
     padding: 6px 12px;
     background-color: #272729;
-    color: #ffffff;
-    text-decoration: none;
     border-radius: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 14px;
